Update Appunti di Elementi di Teoria Degli Insiemi.tex
Corretta una svista in un esempio

--- a/Appunti di Elementi di Teoria Degli Insiemi.tex
+++ b/Appunti di Elementi di Teoria Degli Insiemi.tex
@@ -478,7 +478,7 @@ ed in cui le frecce rappresentano la relazione di appartenenza.
 \end{center}
 
 Possiamo solo fare affermazioni a proposito di vertici e frecce di questo grafo. Per esempio:
-\[ \text{``$a$ è un elemento di un certo $b$''} \equiv \text{``c'è un percorso di due frecce fra $a$ e $b$''} 
+\[ \text{``$a$ è un elemento di un elemento di un certo $b$''} \equiv \text{``c'è un percorso di due frecce fra $a$ e $b$''} 
 	\]
 che corrisponde mediante formule insiemistiche a $ \exists x \, a \in x \land x \in b$. E ancora:
 \[\text{``$a$ è un sottoinsieme di $b$''} \equiv \text{``ogni elemento di $a$ è elemento di $b$''} \equiv \]\[
