--- a/Appunti di Elementi di Teoria Degli Insiemi.tex
+++ b/Appunti di Elementi di Teoria Degli Insiemi.tex
@@ -1286,7 +1286,7 @@ analogamente valgono simmetria e riflessività.
 
 \begin{remark}[Caratterizzazione funzione inversa]
 	Data $f : A \rightarrow B$ bigettiva e $g : B \rightarrow A$ è equivalente scrivere:
-	\[ g = f^{-1} \qquad g \circ f = \id_A \land f \circ g = \id_B
+	\[ g = f^{-1} \qquad g \circ f = \id_A \qquad f \circ g = \id_B
 		\]
 \end{remark}
 
